--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -30,8 +30,8 @@ endif; ?>
         <button id="unblur-image" type="button" data-toggle="blur-image-<?=$uniqueId
 ?>" class="flex-container flex-dir-column align-spaced large-padding-right-1 large-padding-right-0 large-padding-top-1 margin-bottom-0 align-middle">
             <div class="sensitive-content margin-horizontal-1 large-margin-horizontal-2 padding-1 large-padding-2 xlarge-padding-3 flex-container flex-dir-column">
-                <h3 class="h4 warning-text margin-bottom-2 xlarge-bottom-top-3">This image contains sensitive content. Click or press to view.</h3>
                 <i class="far fa-eye-slash fa-lg"></i>
+                <h3 class="h4 warning-text margin-top-1 xlarge-margin-top-2">This item contains sensitive content which people may find offensive. Click or press to view.</h3>
             </div>
             <div class="attachments">
                 <div class="<?=$alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image unblur-image" id="blur-image-<?=$uniqueId ?>" data-toggler=".unblur-image">
