--- a/view/common/block-layout/resource-text-openseadragon.phtml
+++ b/view/common/block-layout/resource-text-openseadragon.phtml
@@ -71,7 +71,7 @@ $lang = $filterLocale ? $this->lang() : null;
              $caption = $attachment->caption();
              ?>
             <?= $render ?>
-            <div class="caption">
+            <div class="caption margin-horizontal-1 padding-1">
                 <?= $caption ?>                   
             </div>
          <?php
