--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -73,7 +73,7 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
             <div class="item resource">
                 <?= $render ?>
-                <div class="caption">
+                <div class="caption margin-horizontal-1 padding-1">
                     <?= $caption ?>
                 </div>
             </div>
