Updated logo link

--- a/view/layout/header.phtml
+++ b/view/layout/header.phtml
@@ -1,5 +1,5 @@
 <header role="banner" class="grid-x grid-padding-x grid-container flex-container align-center align-spaced">
-    <a href="http://www.manchester.ac.uk/library"><img
+    <a href="http://www.manchester.ac.uk"><img
             src="https://assets.manchester.ac.uk/corporate/images/design/logo-university-of-manchester.png"
             alt="The University of Manchester Library logo" class="university-logo" /></a>
     <div class="site-heading padding-bottom-1">
