--- a/view/common/block-layout/legacy-blocks/item-showcase-fixed-img-height.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-fixed-img-height.phtml
@@ -13,7 +13,7 @@
                 endif;
                 ?>
             </div>
-            <div class="metadata margin-bottom-1 font-wide">
+            <div class="metadata margin-bottom-1">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == 'item_title'): ?>
             <h3><?php echo $item->link($item->displayTitle()); ?></h3>
