--- a/view/common/block-layout/resource-text-container.phtml
+++ b/view/common/block-layout/resource-text-container.phtml
@@ -87,7 +87,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3><?php echo $item->link($media->displayTitle()); ?></h3>
         <?php endif; ?>
       </div>
-    <div class="text font-wide">
+    <div class="text">
         <?= $html ?>
     </div>
 </div>
