--- a/view/common/block-layout/resource-text-openseadragon.phtml
+++ b/view/common/block-layout/resource-text-openseadragon.phtml
@@ -99,7 +99,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endif;
             ?>
         </div>
-        <div class="text font-wide">
+        <div class="text">
             <?= $html ?>
             <?php
             $identifier = $item->value("dcterms:identifier");
