--- a/view/common/block-layout/callout.phtml
+++ b/view/common/block-layout/callout.phtml
@@ -1,5 +1,5 @@
 <div id="block-<?php echo $this->blockId; ?>" class="callout region ?> <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
-    <div class="callout-text font-wide">
+    <div class="callout-text">
         <?php echo $this->callout; ?>
     </div>
     <div class="primary-text">
