--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -32,7 +32,7 @@
     $caption = $attachment->caption();
     if ($caption):
     ?>
-        <div class="caption padding-1 font-wide"><?php echo $caption; ?></div>
+        <div class="caption padding-1"><?php echo $caption; ?></div>
     <?php endif; ?>
     </div>
 <?php endforeach; ?>
