--- a/view/common/block-layout/item-showcase-block.phtml
+++ b/view/common/block-layout/item-showcase-block.phtml
@@ -35,7 +35,7 @@
             $caption = $attachment->caption();
             if ($caption):
                 ?>
-                <div class="caption padding-1 font-wide grid-container text-left"><?php echo $caption; ?></div>
+                <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
             <?php endif; ?>
         </div>
     <?php endforeach; ?>
