--- a/view/common/block-layout/legacy-blocks/item-showcase-multiples-full-width-old.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-multiples-full-width-old.phtml
@@ -42,7 +42,7 @@
             $caption = $attachment->caption();
             if ($caption):
                 ?>
-                <div class="caption font-wide padding-1 xlarge-padding-2 xlarge-padding-horizontal-3 flex-child-grow"><?php echo $caption; ?></div>
+                <div class="caption padding-1 xlarge-padding-2 xlarge-padding-horizontal-3 flex-child-grow"><?php echo $caption; ?></div>
             <?php endif; ?>
         </div>
     <?php endforeach; ?>
