--- a/view/common/block-layout/legacy-blocks/item-showcase-multiples-old.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-multiples-old.phtml
@@ -43,7 +43,7 @@
                 $caption = $attachment->caption();
                 if ($caption):
                     ?>
-                    <div class="caption padding-1 xlarge-padding-2 xlarge-padding-horizontal-3 font-wide flex-child-grow"><?php echo $caption; ?></div>
+                    <div class="caption padding-1 xlarge-padding-2 xlarge-padding-horizontal-3 flex-child-grow"><?php echo $caption; ?></div>
                 <?php endif; ?>
             </div>
         <?php endforeach; ?>
