--- a/view/common/block-layout/legacy-blocks/item-showcase-single-full-item.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-single-full-item.phtml
@@ -39,9 +39,9 @@
                 $caption = $attachment->caption();
                 if ($caption):
                     ?>
-                    <div class="caption padding-vertical-1 padding-horizontal-2 xlarge-padding-horizontal-3 font-wide flex-child-grow grid-container"><?php echo $caption; ?></div>
+                    <div class="caption padding-vertical-1 padding-horizontal-2 xlarge-padding-horizontal-3 flex-child-grow grid-container"><?php echo $caption; ?></div>
                 <?php endif; ?>
-                <div class="text font-wide align-left">
+                <div class="text align-left">
                     <?php
                     $identifier = $item->value('dcterms:identifier');
                     if ($identifier):
