--- a/view/common/block-layout/legacy-blocks/item-showcase-single.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-single.phtml
@@ -43,10 +43,10 @@
                 $caption = $attachment->caption();
                 if ($caption):
                     ?>
-                    <div class="caption padding-1 xlarge-padding-horizontal-2 xlarge-padding-horizontal-3 font-wide flex-child-grow grid-container"><?php echo $caption; ?></div>
+                    <div class="caption padding-1 xlarge-padding-horizontal-2 xlarge-padding-horizontal-3 flex-child-grow grid-container"><?php echo $caption; ?></div>
                 <?php endif; ?>
 
-                <div class="text font-wide text-left">
+                <div class="text text-left">
                     <?php
                     $identifier = $item->value('dcterms:identifier');
                     if ($identifier):
