--- a/view/common/block-layout/resource-text-sensitive-content.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content.phtml
@@ -93,7 +93,7 @@ elseif ($showTitleOption == 'file_name'): ?>
             <?php
 endif; ?>
         </div>
-        <div class="text font-wide">
+        <div class="text">
             <?=$html
 ?>
         </div>
