--- a/view/common/block-layout/resource-text-video.phtml
+++ b/view/common/block-layout/resource-text-video.phtml
@@ -101,7 +101,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3><small origin><?php echo $origin; ?></small></h3>
         <?php endif; ?>
         </div>
-            <div class="text font-wide">
+            <div class="text">
                 <?= $html ?>
                 <?php
                 $identifier = $item->value('dcterms:identifier');
