Third attempt - move icon on larger screens

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1120,7 +1120,10 @@ section.image-banner {
 
 /*Additional Search Bar*/
 .search-bar {
+  display: none;
+  @include breakpoint(large) {
   display: flex;
+  }
 }
 
 .search-bar svg {
