--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1144,6 +1144,15 @@ section.image-banner {
   border-radius: 50px;
 }
 
+.search-bar button.search-icon {
+  @include breakpoint(large) {
+    margin: 0 0.5rem;
+  }
+  @include breakpoint(1000px) {
+    margin: 0 1rem;
+  }
+}
+
 .search-button {
   display: none;
   &.is-shown {
@@ -1187,6 +1196,15 @@ h1.site-title {
 .search-bar-mobile button.search-icon[aria-expanded=true] {
   background: $primary-color;
   }
+  
+#show-search-menu input[type=text]:not(:only-child) {
+  @include breakpoint(large) {
+  width: 124px;
+  }
+  @include breakpoint(1000px) {
+    width: auto;
+  }
+}
 
 #show-search-menu-mobile input[type=text]:not(:only-child) {
   width: 100%;
