--- a/view/common/header-dropdown.phtml
+++ b/view/common/header-dropdown.phtml
@@ -23,7 +23,7 @@
                 aria-label="<?php echo $this->translate('Menu'); ?>"><i class="fas fa-bars"></i></button>
     </nav>
     <button>
-    <?= $this->navMenu('explicit-content') ?>
+    <?= $this->navMenu('switcher') ?>
     </button>
 </div>
 <div class="top-bar">
