--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1212,6 +1212,7 @@ nav.top-bar-left {
   align-items: center;
   background: $white;
   border: solid rem-calc(1px) $medium-gray;
+  padding: .5rem 1.5rem .5rem .5rem;
   & ul {
     margin-left: 0;
     list-style-type: none;
@@ -1223,7 +1224,7 @@ nav.top-bar-left {
   color: $white;
   }*/
   & svg {
-    margin-right: rem-calc(12px);
+    margin: 0 rem-calc(12px);
   }
   }
 
