FInal revision to search box

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1216,6 +1216,7 @@ nav.top-bar-left {
 
 #show-search-menu-mobile input[type=text]:not(:only-child) {
   width: 100%;
+  border-radius: 1.5rem 0 0 1.5rem;
   }
 
 /*Agile Theme Tools Blocks*/ 
