--- a/view/common/block-layout/asset-hero-title-bottom.phtml
+++ b/view/common/block-layout/asset-hero-title-bottom.phtml
@@ -34,18 +34,22 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
         <?php if (!empty($heading)) : ?>
             <div class="grid-x hero-title-bottom align-bottom">
                 <div class="hero-title">
-                    <h2><?= $heading ?></h2>
-                    <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
-                    <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
-                        <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
-                    <?php endif; ?>
+                    <div class="grid-container">
+                        <h2><?= $heading ?></h2>
+                        <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
+                        <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
+                            <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
+                        <?php endif; ?>
+                    </div>
                 </div>
             </div>
         <?php endif; ?>
     </div>
     <?php if ($attachment['caption'] !== ''): ?>
-        <h3 class="h5 caption padding-horizontal-1 medium-large-padding-horizontal-2 large-padding-horizontal-3">
-            <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
-        </h3>
+        <div class="grid-container">
+            <h3 class="h5 caption padding-horizontal-1 medium-large-padding-horizontal-2 large-padding-horizontal-3">
+                <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
+            </h3>
+        </div>
     <?php endif; ?>
 </div>
