Revised title bottom hero

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -637,6 +637,11 @@ nav.breadcrumbs {
     }
   }
 
+  .hero-title-caption {
+    width: 100%;
+    background-color: rgb(247 247 247);
+  }
+
   h3.caption {
       background: #f7f7f7;
       padding: 0.5rem 0;
