--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1252,6 +1252,37 @@ nav.top-bar-left {
   border-radius: 1.5rem 0 0 1.5rem;
   }
 
+
+/*Search Results*/
+.results .resource-link, 
+.resource.show .resource-link {
+    flex-direction: column;
+}
+
+.resource.show .resource-link img, #linked-resources img, .results .resource-link img {
+    width: 90vw;
+    height: auto;
+    max-height: 400px;
+    object-fit: cover;
+    @include breakpoint(medium){
+      width: 350px;
+      max-height: 350px;
+    }
+}
+
+.results>ul>li {
+    padding: 1rem;
+    align-items: center;
+    justify-content: center;
+    @include breakpoint(large) {
+      width: 33%;
+    }
+  }
+
+span.resource-name {
+margin-top: 0.5 * $global-margin;
+}
+
 /*Agile Theme Tools Blocks*/ 
 /*Old Item Listing with Introduction Block*/
 .item-listing h2,
