--- a/view/common/block-layout/resource-text-openseadragon.phtml
+++ b/view/common/block-layout/resource-text-openseadragon.phtml
@@ -101,6 +101,9 @@ $lang = $filterLocale ? $this->lang() : null;
         </div>
         <div class="text">
             <?= $html ?>
+            <div class="learn-more">
+                <h3 class="h4"><?php echo $item->link('Learn more about this item'); ?></h3>
+            </div>
             <?php
             $identifier = $item->value("dcterms:identifier");
             if ($identifier): ?>
