--- a/view/common/block-layout/resource-text-container.phtml
+++ b/view/common/block-layout/resource-text-container.phtml
@@ -87,8 +87,17 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3><?php echo $item->link($media->displayTitle()); ?></h3>
         <?php endif; ?>
       </div>
-    <div class="text">
-        <?= $html ?>
+      <div class="text">
+            <?= $html ?>
+            <div class="learn-more">
+                <h3 class="h4"><?php echo $item->link('Learn more about this item'); ?></h3>
+            </div>
+            <?php
+            $identifier = $item->value("dcterms:identifier");
+            if ($identifier): ?>
+            <h3 class="h4"><small><?php echo "Ref. " . $identifier; ?></small></h3>
+            <?php endif;
+            ?>
+        </div>
     </div>
-</div>
 </div>
