--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -94,12 +94,15 @@ $lang = $filterLocale ? $this->lang() : null;
         </div>
         <div class="text">
             <?= $html ?>
+            <div class="learn-more">
+                <h3 class="h4"><?php echo $item->link('Learn more about this item'); ?></h3>
+            </div>
             <?php
-            $identifier = $item->value('dcterms:identifier');
-            if ($identifier):
+            $identifier = $item->value("dcterms:identifier");
+            if ($identifier): ?>
+            <h3 class="h4"><small><?php echo "Ref. " . $identifier; ?></small></h3>
+            <?php endif;
             ?>
-        <h3 class="h4"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
-        <?php endif; ?>
         </div>
     </div>
 </div>
