--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -84,14 +84,12 @@ endforeach; ?>
     </div>
     <div class="resource-text large-5 flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3">
         <div class="metadata margin-bottom-1 separator-center">
-            <?php $showTitleOption = $this->showTitleOption; ?>
-            <?php if ($showTitleOption == 'item_title'): ?>
-            <h3><?php echo $item->link($item->displayTitle()); ?></h3>
-            <?php
-elseif ($showTitleOption == 'file_name'): ?>
-            <h3><?php echo $item->link($media->displayTitle()); ?></h3>
-            <?php
-endif; ?>
+        <?php $showTitleOption = $this->showTitleOption; ?>
+            <?php if ($showTitleOption == "item_title"): ?>
+            <h3><?php echo $item->displayTitle(); ?></h3>
+            <?php elseif ($showTitleOption == "file_name"): ?>
+            <h3><?php echo $media->displayTitle(); ?></h3>
+            <?php endif; ?>
         </div>
         <div class="text">
             <?= $html ?>
