--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -36,21 +36,17 @@ $lang = $filterLocale ? $this->lang() : null;
                 $link = null;
                 $item = $attachment->item();
                 if ($item):
-               $media = $attachment->media() ? : $item->primaryMedia();
-               $mediaRenderer = $media->renderer();
-               if ($media && $mediaRenderer !== 'iiif') :
-                   echo $media->render([
-                   'thumbnailType' => $thumbnailType,
-                   'link' => $link,
-               ]);
-               elseif ($media && $mediaRenderer === 'youtube') :
-                    echo $media->render([
-                    'thumbnailType' => $thumbnailType,
-                    'link' => $link,
-                    ]);
-               elseif ($media) :
-                   echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-               endif;
+                    $media = $attachment->media() ? : $item->primaryMedia();
+                    $mediaRenderer = $media->renderer();
+                    $mediaType = $media->mediaType();
+                    if ($media && $mediaRenderer === 'iiif') :
+                        echo $this->thumbnail($media, $this->thumbnailType);
+                    elseif ($media && $mediaType === 'image/jpeg') :
+                        echo $this->thumbnail($media, $this->thumbnailType);
+                    elseif ($media) :
+                        echo $media->render(['thumbnailType' => $thumbnailType,'link' => $link,]);
+                    endif;
+                
 
                     if ($showTitleOption == 'item_title'):
                         $title = $item->displayTitle(null, $lang);
