--- a/view/common/block-layout/resource-text-container-metadata.phtml
+++ b/view/common/block-layout/resource-text-container-metadata.phtml
@@ -40,15 +40,13 @@ $lang = $filterLocale ? $this->lang() : null;
                     $mediaRenderer = $media->renderer();
                     $mediaType = $media->mediaType();
                     if ($media && $mediaRenderer === 'iiif') :
-                   echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-                   elseif ($media && $mediaType === 'image/jpeg') :
-                   echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-                   elseif ($media) :
-                   echo $media->render([
-                   'thumbnailType' => $thumbnailType,
-                   'link' => $link,
-                    ]);
-                endif;
+                        echo $this->thumbnail($media, $this->thumbnailType);
+                    elseif ($media && $mediaType === 'image/jpeg') :
+                        echo $this->thumbnail($media, $this->thumbnailType);
+                    elseif ($media) :
+                        echo $media->render(['thumbnailType' => $thumbnailType,'link' => $link,]);
+                    endif;
+                
 
                     if ($showTitleOption == 'item_title'):
                         $title = $item->displayTitle(null, $lang);
