Removed image links from Item Showcase blocks

--- a/view/common/block-layout/item-showcase-block.phtml
+++ b/view/common/block-layout/item-showcase-block.phtml
@@ -16,9 +16,9 @@
                 $title = $this->plugin('escapeHtml')($item->displayTitle());
                 $media = $attachment->media() ?: $item->primaryMedia();
                 if ($media):
-                    $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $item->linkRaw($this->thumbnail($media, $this->thumbnailType, ['alt' => $title])) : $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
-                    echo $image;
-                endif;
+                    $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $this->thumbnail($media, $this->thumbnailType, ['alt' => $title]) : $this->thumbnail($media, $this->thumbnailType);
+                    echo $image;  // Assuming $item is an object and should be called as a method, not a function.
+                endif;                
                 ?>
                     <?php $showTitleOption = $this->showTitleOption; ?>
                     <?php if ($showTitleOption == 'item_title'): ?>
@@ -37,6 +37,9 @@
                 ?>
                 <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
             <?php endif; ?>
+            <div class="learn-more">
+                <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
+            </div>
         </div>
     <?php endforeach; ?>
 </div>
