--- a/view/common/block-layout/item-showcase-multiples-full-width.phtml
+++ b/view/common/block-layout/item-showcase-multiples-full-width.phtml
@@ -17,12 +17,10 @@
             if ($item):
                 ?>
                 <?php
-                $title = $this->plugin('escapeHtml')($item->displayTitle());
-                $media = $attachment->media() ?: $item->primaryMedia();
                 if ($media):
-                    $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $item->linkRaw($this->thumbnail($media, $this->thumbnailType, ['alt' => $title])) : $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
+                    $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $this->thumbnail($media, $this->thumbnailType, ['alt' => $title]) : $this->thumbnail($media, $this->thumbnailType);
                     echo $image;
-                endif;
+                endif;  
                 ?>
                 <div class="separator-center">
                     <?php $showTitleOption = $this->showTitleOption; ?>
