--- a/view/common/block-layout/item-showcase-block-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-metadata.phtml
@@ -16,7 +16,7 @@
                 $title = $this->plugin('escapeHtml')($item->displayTitle());
                 $media = $attachment->media() ?: $item->primaryMedia();
                 if ($media):
-                    $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $item->linkRaw($this->thumbnail($media, $this->thumbnailType, ['alt' => $title])) : $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
+                    $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $this->thumbnail($media, $this->thumbnailType, ['alt' => $title]) : $this->thumbnail($media, $this->thumbnailType);
                     echo $image;
                 endif;
                 ?>
