--- a/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
@@ -39,6 +39,9 @@
                     ?>
                     <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
                 <?php endif; ?>
+                <div class="learn-more">
+                    <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
+                </div>
             </div>
         <?php endforeach; ?>
     </div>
